clean Makefile.mingw a bit
Former-commit-id: f1722d4aa46e2c192a0881b773aa105da1571bf3

--- a/Makefile.mingw
+++ b/Makefile.mingw
@@ -21,20 +21,19 @@
 
 REVISION  = $(shell type mscore\revision.h)
 VERSION   = 2.0b-${REVISION}
-MINGW_DIR = C:\MinGW
 CPUS = 2
 
 release:
 	if not exist build.release\nul mkdir build.release
 	if not exist win32install\nul mkdir win32install
-	cd build.release & cmake -G "MinGW Makefiles" -DCMAKE_TOOLCHAIN_FILE=../build/mingw32.mingw.cmake -DCMAKE_INSTALL_PREFIX=../win32install -DCMAKE_BUILD_TYPE=RELEASE -DCMAKE_MAKE_PROGRAM=${MINGW_DIR}\bin\mingw32-make.exe ..
+	cd build.release & cmake -G "MinGW Makefiles" -DCMAKE_TOOLCHAIN_FILE=../build/mingw32.mingw.cmake -DCMAKE_INSTALL_PREFIX=../win32install -DCMAKE_BUILD_TYPE=RELEASE -DCMAKE_MAKE_PROGRAM=mingw32-make.exe ..
 	cd build.release & $(MAKE) lrelease
 	cd build.release & $(MAKE) -j ${CPUS}
 
 debug:
 	if not exist build.debug\nul mkdir build.debug
 	if not exist win32install\nul mkdir win32install
-	cd build.debug & cmake -G "MinGW Makefiles" -DCMAKE_TOOLCHAIN_FILE=../build/mingw32.mingw.cmake -DCMAKE_INSTALL_PREFIX=../win32install -DCMAKE_BUILD_TYPE=DEBUG -DCMAKE_MAKE_PROGRAM=${MINGW_DIR}\bin\mingw32-make.exe ..
+	cd build.debug & cmake -G "MinGW Makefiles" -DCMAKE_TOOLCHAIN_FILE=../build/mingw32.mingw.cmake -DCMAKE_INSTALL_PREFIX=../win32install -DCMAKE_BUILD_TYPE=DEBUG -DCMAKE_MAKE_PROGRAM=mingw32-make.exe ..
 	cd build.debug & $(MAKE) lrelease
 	cd build.debug & $(MAKE) -j ${CPUS}
 
