travis-ci: install and use gcc 4.7
Former-commit-id: abb66ce824594361e16eb115875e3e79837da262

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 before_install:
   # rm the rabbitmq source file since it currently times out and we don't need it
   - "sudo rm -f /etc/apt/sources.list.d/rabbitmq-source.list"
-  - "sudo apt-get update"
+  - "sudo add-apt-repository ppa:ubuntu-toolchain-r/test"
+  - "sudo apt-get -q update"
   - "sudo apt-get install -y libqt4-dev"
   - "sudo apt-get install -y alsa libsndfile1 wget make g++ ant curl cmake"
   - "sudo apt-get install -y libasound2-dev portaudio19-dev libsndfile1-dev zlib1g-dev libfreetype6-dev libfontconfig-dev"
