--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 before_install:
   # rm the rabbitmq source file since it currently times out and we don't need it
   - "sudo rm -f /etc/apt/sources.list.d/rabbitmq-source.list"
-  - "sudo add-apt-repository ppa:ubuntu-toolchain-r/test"
+  - "sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test"
   - "sudo apt-get -q update"
+  - "sudo apt-get install -y g++-4.7"
+  - "sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 40 --slave /usr/bin/g++ g++ /usr/bin/g++-4.7"
   - "sudo apt-get install -y libqt4-dev"
-  - "sudo apt-get install -y alsa libsndfile1 wget make g++ ant curl cmake"
+  - "sudo apt-get install -y alsa libsndfile1 wget make ant curl cmake"
   - "sudo apt-get install -y libasound2-dev portaudio19-dev libsndfile1-dev zlib1g-dev libfreetype6-dev libfontconfig-dev"
   - "sudo apt-get install -y lame libmp3lame-dev"
 before_script: 
