travis-ci: limit number of CPUs used during compilation
Former-commit-id: b6f62b401f095a770bdfb17f48ae11a47f8bf94a

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - "sudo apt-get install -y lame libmp3lame-dev"
 before_script: 
   - "make revision"
-  - "make debug"
+  - "make debug CPUS=1"
   - "sudo make installdebug"
   - "cd build.debug/mtest"
   - "make"
