clean up cmake files
Former-commit-id: c14a8c86c3e6017951395ce20f8cd31f2e230963

--- a/libmscore/CMakeLists.txt
+++ b/libmscore/CMakeLists.txt
@@ -69,7 +69,7 @@ add_library (
       utils.cpp velo.cpp volta.cpp xml.cpp mscore.cpp
       undo.cpp cmd.cpp scorefile.cpp revisions.cpp
       check.cpp input.cpp icon.cpp ossia.cpp
-      dsp.cpp tempo.cpp sig.cpp pos.cpp fraction.cpp duration.cpp
+      tempo.cpp sig.cpp pos.cpp fraction.cpp duration.cpp
       figuredbass.cpp simpletext.cpp rehearsalmark.cpp transpose.cpp
       property.cpp range.cpp elementmap.cpp notedot.cpp imageStore.cpp
       qzip.cpp audio.cpp splitMeasure.cpp joinMeasure.cpp midifile.cpp
