--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -135,10 +135,10 @@ if (APPLE)
 	set (MACOSX_BUNDLE_INFO_STRING MuseScore prerelease for Mac OSX)
 	set (MACOSX_BUNDLE_ICON_FILE      mscore.icns)
 	set (MACOSX_BUNDLE_GUI_IDENTIFIER net.sourceforge.mscore)
-	set (MACOSX_BUNDLE_LONG_VERSION_STRING ${Mscore_VERSION_FULL})
+	set (MACOSX_BUNDLE_LONG_VERSION_STRING ${MUSESCORE_VERSION_FULL})
 	set (MACOSX_BUNDLE_BUNDLE_NAME MuseScore)
-	set (MACOSX_BUNDLE_SHORT_VERSION_STRING ${Mscore_VERSION})
-	set (MACOSX_BUNDLE_BUNDLE_VERSION ${Mscore_VERSION_FULL})
+	set (MACOSX_BUNDLE_SHORT_VERSION_STRING ${MUSESCORE_VERSION})
+	set (MACOSX_BUNDLE_BUNDLE_VERSION ${MUSESCORE_VERSION_FULL})
 	set (MACOSX_BUNDLE_COPYRIGHT musescore.org)
 else (APPLE)
 	set (ExecutableName mscore)
@@ -267,9 +267,9 @@ if (MINGW)
       target_link_libraries(mscore sndfile-1)
    endif (HAS_AUDIOFILE)
 
-   if (OGGVORBIS)
+   if (SOUNDFONT3)
       target_link_libraries(mscore vorbis ogg)
-   endif (OGGVORBIS)
+   endif (SOUNDFONT3)
 
    if (AEOLUS)
       target_link_libraries(mscore aeolus)
@@ -353,9 +353,9 @@ else (MINGW)
        target_link_libraries(mscore sndfile)
    endif (HAS_AUDIOFILE)
 
-   if (OGGVORBIS)
+   if (SOUNDFONT3)
       target_link_libraries(mscore vorbis ogg)
-   endif (OGGVORBIS)
+   endif (SOUNDFONT3)
 
    if (AEOLUS)
       target_link_libraries(mscore aeolus)
