precompiled header for mac
Former-commit-id: 7825ff8db016fce67045f80840ea02ace9c8a8f2

--- a/aeolus/aeolus/CMakeLists.txt
+++ b/aeolus/aeolus/CMakeLists.txt
@@ -38,8 +38,10 @@ add_library (aeolus STATIC
 set_target_properties (
       aeolus
       PROPERTIES
-         COMPILE_FLAGS "-include ${PROJECT_BINARY_DIR}/all.h -g -Wall -Wextra -Winvalid-pch"
+         COMPILE_FLAGS "${PCH_INCLUDE} -g -Wall -Wextra -Winvalid-pch"
       )
+
+xcode_pch(aeolus all)
 
 ADD_DEPENDENCIES(aeolus mops1)
 ADD_DEPENDENCIES(aeolus mops2)
