--- a/awl/CMakeLists.txt
+++ b/awl/CMakeLists.txt
@@ -67,8 +67,10 @@ add_library (
 set_target_properties (
       awl
       PROPERTIES
-         COMPILE_FLAGS "-include ${PROJECT_BINARY_DIR}/all.h -g -Wall -Wextra -Winvalid-pch"
+         COMPILE_FLAGS "${PCH_INCLUDE} -g -Wall -Wextra -Winvalid-pch"
       )
+
+xcode_pch(awl all)
 
 ADD_DEPENDENCIES(awl mops1)
 ADD_DEPENDENCIES(awl mops2)
