Switching-Concert-Pitch Benchmark
Former-commit-id: 560d718ee6589e2dc4f527ca148c1d03f651de68

--- a/mtest/libmscore/concertpitch/CMakeLists.txt
+++ b/mtest/libmscore/concertpitch/CMakeLists.txt
@@ -11,11 +11,7 @@
 #  the file LICENSE.GPL
 #=============================================================================
 
-subdirs(
-      hairpin note compat link measure beam split join splitstaff
-      timesig layout element midi dynamic plugins copypaste tuplet
-      repeat concertpitch
-      )
+set(TARGET tst_concertpitchbenchmark)
 
-# midi - does not work
+include(${PROJECT_SOURCE_DIR}/mtest/cmake.inc)
 
