--- a/awl/CMakeLists.txt
+++ b/awl/CMakeLists.txt
@@ -127,4 +127,8 @@ set_target_properties(awlplugin
 # dont install awlplugin on default
 # install( TARGETS awlplugin DESTINATION ${QT_PLUGINS_DIR}/designer/ )
 
+#add_executable(ltest ltest.cpp)
+#target_link_libraries (ltest awlplugin msynth al ${QT_LIBRARIES})
+
+
 endif (NOT MINGW AND NOT APPLE)
