update synthesizer implementation
Former-commit-id: bc46048cd3b589426addbb4723ff5fd3ef8b499f

--- a/synthesizer/CMakeLists.txt
+++ b/synthesizer/CMakeLists.txt
@@ -20,6 +20,7 @@ endif (APPLE)
 
 QT4_WRAP_CPP(synthesizerMocs
       synthesizergui.h
+      msynthesizer.h
       )
 
 add_library (synthesizer STATIC
