some regression fixes
Former-commit-id: 53cb0ec925f527aa23dece69e6afa226220ce0e2

--- a/effects/CMakeLists.txt
+++ b/effects/CMakeLists.txt
@@ -18,7 +18,11 @@ else (APPLE)
         set(INCS "")
 endif (APPLE)
 
-QT4_ADD_RESOURCES (qrc_effects_files zita1/zita.qrc)
+QT4_ADD_RESOURCES (qrc_effects_files
+      zita1/zita.qrc
+      freeverb/freeverb.qrc
+      noeffect/noeffect.qrc
+      )
 
 QT4_WRAP_CPP(effectMocs
       effectgui.h
