move driverFactory() into separate file
Former-commit-id: f866d7903a42c16e898b4a09ce6f0e93f28e3d6c

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -201,6 +201,8 @@ add_executable ( ${ExecutableName}
       musicxmlsupport.cpp exportxml.cpp importxml.cpp importxmlfirstpass.cpp
       savePositions.cpp pluginManager.cpp inspectorJump.cpp inspectorMarker.cpp
       inspectorGlissando.cpp inspectorNote.cpp paletteBoxButton.cpp
+      driver.cpp
+
       ${OMR_FILES}
       ${AUDIO}
       ${SCRIPT_FILES}
