fixes for synthesizer
Former-commit-id: a8a9241699072f34c192b5540df96f2012995618

--- a/aeolus/aeolus/CMakeLists.txt
+++ b/aeolus/aeolus/CMakeLists.txt
@@ -26,10 +26,17 @@ else (APPLE)
         set(INCS "")
 endif (APPLE)
 
+
+QT4_WRAP_CPP(aeolusMocs aeolusgui.h)
+QT4_WRAP_UI (aeolusUi aeolus_gui.ui)
+
 add_library (aeolus STATIC
+      ${aeolusMocs}
+      ${aeolusUi}
       aeolus.cpp audio.cpp model.cpp addsynth.cpp scales.cpp
 	reverb.cpp asection.cpp division.cpp rankwave.cpp
       rngen.cpp exp2ap.cpp
+      aeolusgui.cpp
       ${PROJECT_BINARY_DIR}/all.h
       ${PCH}
       ${INCS}
