fix pch generation
Former-commit-id: a5e430cc44ce409fe1d239c2eb4dd76d781e3740

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,11 +95,11 @@ if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
 endif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
 
 if (APPLE)
-   set(CMAKE_CXX_FLAGS_DEBUG   "-std=c++0x -fpie -stdlib=libc++ -g")
-   set(CMAKE_CXX_FLAGS_RELEASE "-std=c++0x -fpie -stdlib=libc++ -O2 -DNDEBUG")
+   set(CMAKE_CXX_FLAGS_DEBUG   "-std=c++0x -fPIC -stdlib=libc++ -g")
+   set(CMAKE_CXX_FLAGS_RELEASE "-std=c++0x -fPIC -stdlib=libc++ -O2 -DNDEBUG")
 else (APPLE)
-   set(CMAKE_CXX_FLAGS_DEBUG   "-std=gnu++0x -fpie -g")
-   set(CMAKE_CXX_FLAGS_RELEASE "-std=gnu++0x -fpie -O2 -DNDEBUG")
+   set(CMAKE_CXX_FLAGS_DEBUG   "-std=gnu++0x -fPIC -fPIE -g")
+   set(CMAKE_CXX_FLAGS_RELEASE "-std=gnu++0x -fPIC -O2 -DNDEBUG")
 endif(APPLE)
 
 set(CMAKE_INCLUDE_CURRENT_DIR TRUE)
