--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -62,7 +62,7 @@ QT4_WRAP_UI (ui_headers
       box.ui pluginManager.ui inspector_jump.ui inspector_marker.ui inspector_glissando.ui
       inspector_clef.ui inspector_timesig.ui inspector_keysig.ui inspector_barline.ui
       inspector_tuplet.ui inspector_accidental.ui inspector_tempotext.ui
-      inspector_dynamic.ui inspector_line.ui harmony.ui
+      inspector_dynamic.ui inspector_line.ui harmony.ui pathlistdialog.ui
       ${SCRIPT_UI}
       )
 
@@ -95,7 +95,7 @@ QT4_WRAP_CPP (mocs
       inspectorLasso.h inspectorVolta.h inspectorOttava.h inspectorTrill.h
       inspectorHairpin.h qmlplugin.h palettebox.h workspace.h pluginManager.h
       inspectorJump.h inspectorMarker.h inspectorGlissando.h inspectorNote.h
-      paletteBoxButton.h
+      paletteBoxButton.h pathlistdialog.h
       ${OMR_MOCS}
       ${SCRIPT_MOCS}
       )
@@ -202,6 +202,7 @@ add_executable ( ${ExecutableName}
       savePositions.cpp pluginManager.cpp inspectorJump.cpp inspectorMarker.cpp
       inspectorGlissando.cpp inspectorNote.cpp paletteBoxButton.cpp
       driver.cpp exportmidi.cpp
+      pathlistdialog.cpp
 
       ${OMR_FILES}
       ${AUDIO}
