new grouping implementation, dialog for changing grouping for a timesig
Former-commit-id: 1ec148995ac56407b3572040bb83f959cd657e92

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -95,7 +95,7 @@ QT4_WRAP_CPP (mocs
       inspectorLasso.h inspectorVolta.h inspectorOttava.h inspectorTrill.h
       inspectorHairpin.h qmlplugin.h palettebox.h workspace.h pluginManager.h
       inspectorJump.h inspectorMarker.h inspectorGlissando.h inspectorNote.h
-      paletteBoxButton.h pathlistdialog.h
+      paletteBoxButton.h pathlistdialog.h exampleview.h
       ${OMR_MOCS}
       ${SCRIPT_MOCS}
       )
@@ -202,7 +202,7 @@ add_executable ( ${ExecutableName}
       savePositions.cpp pluginManager.cpp inspectorJump.cpp inspectorMarker.cpp
       inspectorGlissando.cpp inspectorNote.cpp paletteBoxButton.cpp
       driver.cpp exportmidi.cpp
-      pathlistdialog.cpp
+      pathlistdialog.cpp exampleview.cpp
 
       ${OMR_FILES}
       ${AUDIO}
