--- a/mtest/CMakeLists.txt
+++ b/mtest/CMakeLists.txt
@@ -31,7 +31,7 @@ add_library(
       testutils STATIC
       ${mtestMocs}
       testutils.cpp
-      mcursor.cpp
+      ${PROJECT_SOURCE_DIR}/libmscore/mcursor.cpp
       ${PROJECT_SOURCE_DIR}/mscore/capella.cpp
       ${PROJECT_SOURCE_DIR}/mscore/capxml.cpp
       ${PROJECT_SOURCE_DIR}/mscore/exportxml.cpp
