--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -62,7 +62,7 @@ QT4_WRAP_UI (ui_headers
       box.ui pluginManager.ui inspector_jump.ui inspector_marker.ui inspector_glissando.ui
       inspector_clef.ui inspector_timesig.ui inspector_keysig.ui inspector_barline.ui
       inspector_tuplet.ui inspector_accidental.ui inspector_tempotext.ui
-      inspector_dynamic.ui inspector_line.ui harmony.ui pathlistdialog.ui
+      inspector_dynamic.ui inspector_line.ui harmony.ui pathlistdialog.ui inspector_textline.ui
       note_groups.ui
       ${SCRIPT_UI}
       )
@@ -96,7 +96,7 @@ QT4_WRAP_CPP (mocs
       inspectorLasso.h inspectorVolta.h inspectorOttava.h inspectorTrill.h
       inspectorHairpin.h qmlplugin.h palettebox.h workspace.h pluginManager.h
       inspectorJump.h inspectorMarker.h inspectorGlissando.h inspectorNote.h
-      paletteBoxButton.h pathlistdialog.h exampleview.h noteGroups.h
+      paletteBoxButton.h pathlistdialog.h exampleview.h noteGroups.h inspectorTextLine.h
       ${OMR_MOCS}
       ${SCRIPT_MOCS}
       )
@@ -203,7 +203,7 @@ add_executable ( ${ExecutableName}
       savePositions.cpp pluginManager.cpp inspectorJump.cpp inspectorMarker.cpp
       inspectorGlissando.cpp inspectorNote.cpp paletteBoxButton.cpp
       driver.cpp exportmidi.cpp noteGroups.cpp
-      pathlistdialog.cpp exampleview.cpp
+      pathlistdialog.cpp exampleview.cpp inspectorTextLine.cpp
 
       ${OMR_FILES}
       ${AUDIO}
